<resources>
    <string name="app_name">Student Agenda</string>
    <string name="welc">Welcome</string>
    <string name="fname">First Name</string>
    <string name="name">Name</string>

    <string-array name="lang">
        <item>English</item>
        <item>Français</item>

    </string-array>


    <string-array name="niv">
        <item>Lic. Semaistre 1</item>
        <item>Lic. Semaistre 2</item>
        <item>Lic. Semaistre 3</item>
        <item>Lic. Semaistre 4</item>
        <item>Lic. Semaistre 5</item>
        <item>Lic. Semaistre 6</item>
        <item>Mas. Semaistre 1</item>
        <item>Mas. Semaistre 2</item>
        <item>Mas. Semaistre 3</item>
        <item>Mas. Semaistre 4</item>
    </string-array>

    <string-array name="sexe">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="pfelic">Lic. Semaistre 6</string>
    <string name="pfemas">Mas. Semaistre 4</string>

    <string name="get">Get Start</string>
    <string name="title_activity_time_table">TimeTable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="d1">Saturday</string>
    <string name="d2">Sunday</string>
    <string name="d3">Monday</string>
    <string name="d4">Tuesday</string>
    <string name="d5">Wednesday</string>
    <string name="d6">Thursday</string>

    <string name="add">Add</string>
    <string name="det">Details</string>
    <string name="mod">Modify</string>
    <string name="del">Delete</string>

    <string name="modt">Modify Hour Seance </string>

    <string name="dialaddtitle"> Add a Seance  </string>
    <string name="dialseanam">Module :</string>
    <string name="dialseatype">Type of Module :</string>


    <string-array name="seatype">
        <item name="typeseaC">Cour</item>
        <item name="typeseaTD">TD</item>
        <item name="typeseaTP">TP</item>
    </string-array>

    <string name="typeclassC"> amphi </string>
    <string name="typeclassTD"> SL </string>
    <string name="typeclassTP"> CC </string>


    <string name="dialclassnbr">Number of Class</string>
    <string name="dialprofname">Give The Name of The Prof</string>
    <string name="dialvalid">Valid</string>


    <string name="dialmdfstrt">Start At :</string>
    <string name="dialmdffnsh">Finish At :</string>


    <string name="dialdettitle">Seance Details</string>
    <string name="dialdetclas">Seance Class :</string>
    <string name="dialdetnamprof">Seance Prof :</string>

    <string name="dialdeltitle">Delete The Seance</string>
    <string name="dialdeltask"> Delete Confirmation </string>
    <string name="dialdelcanc"> Cancel </string>

    <string name="titletimetable">TimeTable Of </string>
    <string name="gstmod">Module</string>
    <string name="gstexam">Exams</string>
    <string name="gsttimetab">Time Table</string>
    <string name="pfe">PFE</string>
    <string name="pfecont">Contacts</string>
    <string name="pfetask">Tasks</string>
    <string name="pferdv">RDVs</string>


    <string name="modimod">  Modify a Module  </string>
    <string name="delmod">  Delete a Module  </string>
    <string name="addmod">  Add  </string>
    <string name="dialogmodname">  Name:  </string>
    <string name="dialogmodnameabv">  Abbreviation:  </string>
    <string name="dialogmodcoff">Coef.:</string>
    <string name="dialogmodcrid">  Credits:  </string>
    <string name="dialogmodnbrcour">   Number Of Course:  </string>
    <string name="dialogmodnbrtd">  NumberOf TD:  </string>
    <string name="dialogmodnbrtp">  Numberf TP:  </string>
    <string name="dialogmodmodevexam">  Evaluation Mode Of Exams :  </string>
    <string name="dialogmodmodevtd">  Evaluation Mode Of TD:  </string>
    <string name="dialognoteTD">  TD : </string>
    <string name="dialognoteTP">  TP :  </string>
    <string name="dialognoteExam">  Exam :  </string>
    <string name="addnotemodule">  Add Notes  </string>
    <string name="mofinotemodule">  Modify Notes  </string>
    <string name="notemod">Notes Of Module</string>
    <string name="validebtn">  Vaild  </string>
    <string name="cancebtn">  Cancel  </string>

    <string name="modsem">Modules of</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>

    <string name="deletealert">You Confirme The delete ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="moy">Avg :</string>
    <string name="semmoy">Semester Avg :</string>

    <string name="next">Next</string>
    <string name="title_activity_module__manage">Module_Manage</string>

    <string name="langage">Langage</string>
    <string name="profil">Profil</string>
    <string name="setting">Setting</string>

    <string name="titreexam">Exam Of </string>
    <string name="modexam">Ex. Module</string>
    <string name="profexam">Ex. Prof. Name</string>
    <string name="superexam">Ex. Sup.Prof.</string>
    <string name="hexam">Ex. Time</string>
    <string name="dayexam">Ex. Day</string>
    <string name="lieuexam">Ex Class</string>
    <string name="valider">Valide</string>
    <string name="annuler">Cancel</string>


    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_activity_exam__manage">Exam_Manage</string>


    <string name="enc">Framing Teacher</string>
    <string name="bin">Binome</string>
    <string name="nom">First Name</string>
    <string name="prenom">Name</string>
    <string name="tel">Phone Number</string>
    <string name="sexe">Sexe               </string>
    <string name="type">Contact Type       </string>
    <string name="valide">Valid</string>
    <string name="fem">Female</string>
    <string name="conttitle">Your contacts</string>
    <string name="call">Call</string>
    <string name="msg">Send A Message</string>
    <string name="message">The Message :</string>
    <string name="title_activity_pfe__contact">PFE_Contact</string>


    <string name="PFEtask">PFE Task</string>
    <string name="nbrsem">Number Of Weeks :</string>
    <string name="sem">Week n=°</string>
    <string name="subtask">Subject Task :</string>
    <string name="dettask">Details About The Task :</string>
    <string name="datebeg">Date Of Begining The Task :</string>
    <string name="dateend">Date Of Ending The Task :</string>
    <string name="sit">Situation :</string>
    <string name="late">You\'re Late!</string>
    <string name="nolate">You Still Have Time</string>
    <string name="title_activity_pfe__task">PFE_Task</string>
    <string name="title_activity_pfe__rdv">PFE_RDV</string>

    <string name="rdv">RDV</string>
    <string name="rdvsub">RDV Subject :</string>
    <string name="rdvdate">RDV Date:</string>
    <string name="title_activity_profil">Profil</string>
    <string name="done">Done</string>

</resources>
