<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:id="@+id/addmod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:text="@string/dialseanam" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/nammod"
            />

        <TextView
            android:id="@+id/typemod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/dialseatype"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/spinnertypemod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />




        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/dialclassnbr"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/nbrclass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="numberDecimal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialprofname"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/namprof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnvalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/editText2"
            android:text="@string/dialvalid"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"/>
    </LinearLayout>
</ScrollView>